--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,9 @@
 name: "Install Yotta"
 description: "Install Yotta"
 runs:
-  - name: "Install Ninja"
-    uses: "seanmiddleditch/gha-setup-ninja@master"
-  - name: "Install Python"
-    uses: "actions/setup-python@v2"
-    with:
-      python-version: '2.7.x'
-  - name: "Install Yotta"
-    run: "pip install yotta"
+  steps:
+    - uses: "seanmiddleditch/gha-setup-ninja@master"
+    - uses: "actions/setup-python@v2"
+      with:
+        python-version: '2.7.x'
+    - run: "pip install yotta"
