Use raw commands

--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,29 @@
 name: "Install Yotta"
 description: "Install Yotta"
 runs:
+  using: "composite"
   steps:
-    - uses: "seanmiddleditch/gha-setup-ninja@master"
-    - uses: "actions/setup-python@v2"
-      with:
-        python-version: '2.7.x'
-    - run: "pip install yotta"
+    - name: "Update apt-get"
+      run: "sudo apt-get update"
+      shell: "bash"
+    - name: "Install cmake"
+      run: "sudo apt-get install -y cmake"
+      shell: "bash"
+    - name: "Install build-essential"
+      run: "sudo apt-get install -y build-essential"
+      shell: "bash"
+    - name: "Install Ninja"
+      run: "sudo apt-get install -y ninja-build"
+      shell: "bash"
+    - name: "Install libffi-dev"
+      run: "sudo apt-get install -y libffi-dev"
+      shell: "bash"
+    - name: "Install libssl-dev"
+      run: "sudo apt-get install -y libssl-dev"
+      shell: "bash"
+    - name: "Install Python 2.7"
+      run: "sudo apt-get install -y python2 python2-dev"
+      shell: "bash"
+    - name: "Install Yotta"
+      run: "pip install yotta"
+      shell: "bash"
