--- a/action.yml
+++ b/action.yml
@@ -6,20 +6,8 @@ runs:
     - name: "Update apt-get"
       run: "sudo apt-get update"
       shell: "bash"
-    - name: "Install cmake"
-      run: "sudo apt-get install -y cmake"
-      shell: "bash"
-    - name: "Install build-essential"
-      run: "sudo apt-get install -y build-essential"
-      shell: "bash"
-    - name: "Install Ninja"
-      run: "sudo apt-get install -y ninja-build"
-      shell: "bash"
-    - name: "Install libffi-dev"
-      run: "sudo apt-get install -y libffi-dev"
-      shell: "bash"
-    - name: "Install libssl-dev"
-      run: "sudo apt-get install -y libssl-dev"
+    - name: "Install dependencies"
+      run: "sudo apt-get install -y cmake build-essential ninja-build libffi-dev libssl-dev"
       shell: "bash"
     - name: "Install Python 2.7"
       run: "sudo apt-get install -y python2 python2-dev"
