--- a/action.yml
+++ b/action.yml
@@ -15,3 +15,6 @@ runs:
     - name: "Install Yotta"
       run: "pip install yotta"
       shell: "bash"
+    - name: "Add to path"
+      run: "echo "$HOME/.local/bin" >> $GITHUB_PATH"
+      shell: "bash"
