--- a/action.yml
+++ b/action.yml
@@ -7,8 +7,15 @@ runs:
       run: "sudo apt-get update"
       shell: "bash"
     - name: "Install dependencies"
-      run: "sudo apt-get install -y cmake build-essential ninja-build libffi-dev libssl-dev"
+      run: "sudo apt-get install -y cmake build-essential libffi-dev libssl-dev unzip wget"
       shell: "bash"
+    - name: "Install Ninja"
+      run: |
+        wget https://github.com/ninja-build/ninja/releases/download/v1.10.2/ninja-linux.zip
+        unzip ninja-linux.zip
+        mv ninja /usr/local/bin/ninja
+        chmod +x /usr/local/bin/ninja
+      shell: "Bash"
     - name: "Install Python 2.7"
       run: "sudo apt-get install -y python2 python2-dev"
       shell: "bash"
