--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ runs:
         unzip ninja-linux.zip &&
         mv ninja /usr/local/bin/ninja &&
         chmod +x /usr/local/bin/ninja
-      shell: "Bash"
+      shell: "bash"
     - name: "Install Python 2.7"
       run: "sudo apt-get install -y python2 python2-dev"
       shell: "bash"
