--- a/action.yml
+++ b/action.yml
@@ -13,8 +13,8 @@ runs:
       run: |
         wget https://github.com/ninja-build/ninja/releases/download/v1.10.2/ninja-linux.zip &&
         unzip ninja-linux.zip &&
-        mv ninja /usr/local/bin/ninja &&
-        chmod +x /usr/local/bin/ninja
+        sudo mv ninja /usr/local/bin/ninja &&
+        sudo chmod +x /usr/local/bin/ninja
       shell: "bash"
     - name: "Install Python 2.7"
       run: "sudo apt-get install -y python2 python2-dev"
