Fix script paths

--- a/action.yml
+++ b/action.yml
@@ -18,26 +18,18 @@ runs:
         ninja --version &&
         sudo ln -s /usr/bin/ninja /usr/bin/ninja-build
       shell: "bash"
-    - name: "Download ARM embedded toolchain"
+    - name: "Install ARM embedded toolchain"
       shell: "bash"
       run: |
-        wget -q https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2
-    - name: "Unpack ARM embeddded toolchain"
-      shell: "bash"
-      run: |
-        sudo tar xjf gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 -C /usr/share/
-    - name: "Link ARM embedded toolchain"
-      shell: "bash"
-      run: |
-        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux/bin/arm-none-eabi-gcc /usr/bin/arm-none-eabi-gcc &&
-        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux/bin/arm-none-eabi-g++ /usr/bin/arm-none-eabi-g++ &&
-        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux/bin/arm-none-eabi-gdb /usr/bin/arm-none-eabi-gdb &&
-        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux/bin/arm-none-eabi-size /usr/bin/arm-none-eabi-size
+        wget -q https://developer.arm.com/-/media/Files/downloads/gnu-rm/10-2020q4/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 &&
+        sudo tar xjf gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux.tar.bz2 -C /usr/share/ &&
+        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major/bin/arm-none-eabi-gcc /usr/bin/arm-none-eabi-gcc &&
+        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major/bin/arm-none-eabi-g++ /usr/bin/arm-none-eabi-g++ &&
+        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major/bin/arm-none-eabi-gdb /usr/bin/arm-none-eabi-gdb &&
+        sudo ln -s /usr/share/gcc-arm-none-eabi-10-2020-q4-major/bin/arm-none-eabi-size /usr/bin/arm-none-eabi-size
     - name: "Show versions of ARM embedded toolchain"
       shell: "bash"
       run: |
-        ls /usr/share/gcc-arm-none-eabi-10-2020-q4-major-x86_64-linux/bin/ &&
-        ls /usr/bin/ | grep "arm-none" &&
         arm-none-eabi-gcc --version &&
         arm-none-eabi-g++ --version &&
         arm-none-eabi-gdb --version &&
