--- a/action.yml
+++ b/action.yml
@@ -4,10 +4,10 @@ runs:
   using: "composite"
   steps:
     - name: "Update apt-get"
-      run: "sudo apt-get update"
+      run: "sudo apt-get update --quiet"
       shell: "bash"
     - name: "Install dependencies"
-      run: "sudo apt-get install -y cmake build-essential libffi-dev libssl-dev unzip wget"
+      run: "sudo apt-get install -y cmake build-essential libffi-dev libssl-dev unzip wget --quiet"
       shell: "bash"
     - name: "Install Ninja"
       run: |
@@ -32,15 +32,15 @@ runs:
         arm-none-eabi-gdb --version &&
         arm-none-eabi-size --version
     - name: "Install Python 2.7"
-      run: "sudo apt-get install -y python2 python2-dev"
-      shell: "bash"
-    - name: "Install Yotta"
-      run: "pip install yotta"
+      run: "sudo apt-get install -y python2 python2-dev --quiet"
       shell: "bash"
     - name: "Add to path"
       shell: "bash"
       run: |
         echo "$HOME/.local/bin" >> $GITHUB_PATH
+    - name: "Install Yotta"
+      run: "pip install yotta --quiet"
+      shell: "bash"
     - name: "Run 'yotta clean'"
       shell: "bash"
       run: "yotta clean"
