--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ runs:
       run: "sudo apt-get update --quiet"
       shell: "bash"
     - name: "Install dependencies"
-      run: "sudo apt-get install -y cmake build-essential libffi-dev libssl-dev unzip wget --quiet"
+      run: "sudo apt-get install -y cmake --quiet"
       shell: "bash"
     - name: "Install Ninja"
       run: |
