--- a/action.yml
+++ b/action.yml
@@ -12,10 +12,8 @@ runs:
         unzip ninja-linux.zip &&
         sudo mv ninja /usr/local/bin/ninja &&
         sudo chmod +x /usr/local/bin/ninja &&
-        ninja --version &&
         sudo ln -s /usr/bin/ninja /usr/bin/ninja-build &&
-        sudo ln -s /usr/bin/ninja /usr/local/bin/Ninja &&
-        ninja --version
+        sudo ln -s /usr/bin/ninja /usr/local/bin/Ninja
       shell: "bash"
     - name: "Install Python 2.7"
       run: "sudo apt-get install -y python2 python2-dev --quiet"
