Completely silent now

--- a/action.yml
+++ b/action.yml
@@ -3,12 +3,12 @@ description: "Install Yotta"
 runs:
   using: "composite"
   steps:
-    - run: "sudo apt-get install -qq -o Dpkg::Use-Pty=0 cmake python2 python2-dev --quiet"
+    - run: "sudo apt-get install -qq -o Dpkg::Use-Pty=0 cmake python2 python2-dev --quiet > /dev/null"
       shell: "bash"
     - run: "curl --silent -L https://github.com/ninja-build/ninja/releases/download/v1.10.2/ninja-linux.zip -O"
       shell: "bash"
     - run: |
-        echo "763464859c7ef2ea3a0a10f4df40d2025d3bb9438fcb1228404640410c0ec22d ninja-linux.zip" |sha256sum --check --strict
+        echo "763464859c7ef2ea3a0a10f4df40d2025d3bb9438fcb1228404640410c0ec22d ninja-linux.zip" |sha256sum --check --strict --quiet
       shell: "bash"
     - run: "unzip -qq ninja-linux.zip"
       shell: "bash"
